# polymerpde

./: CMakeLists.txt
main/: PolyConfig.h.in  main.cpp
nobend/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  base.cpp  base.hpp  polymer.cpp  polymer.hpp  zerokappapolymer.cpp  zerokappapolymer.hpp
